--- a/templates/main/courses/course_detail.html
+++ b/templates/main/courses/course_detail.html
@@ -34,14 +34,17 @@
 {% if user == course.owner %}
 <p>Admin Menu:</p>
 <ul>
-    <li><a href="{% url 'get_course_invitation' course.id %}">Share</a></li>
-    <li><a href="{% url 'edit_course' course.id %}">Edit Course</a></li>
-    <li><a href="">Delete Course</a></li>
+  <li><a href="{% url 'course_quiz_list' course.id %}">Quiz List</a></li>
+  <li><a href="{% url 'get_course_invitation' course.id %}">Share</a></li>
+  <li><a href="{% url 'edit_course' course.id %}">Edit Course</a></li>
+  <li><a href="">Delete Course</a></li>
 </ul>
 {% if invitation %}
   <p>Invitation Link:</p>
   <code>{{ request.build_absolute_uri }}join/{{ invitation.invitation_code }}/</code>
 {% endif %}
+{% else %}
+<p>Menu: </p>
 {% endif %}
 
 {% endblock %}
