QUESTION CREATION WITH MULTIPLE CHOICES

--- a/templates/main/quizzes/course_quiz_list.html
+++ b/templates/main/quizzes/course_quiz_list.html
@@ -7,7 +7,7 @@
     <ul>
       {% for quiz in quizzes %}
         <li>
-          <a href="">{{ quiz.title }}</a>
+          <a href="{% url 'quiz_detail' course.id quiz.id %}">{{ quiz.title }}</a>
           <p>{{ quiz.description }}</p>
         </li>
       {% endfor %}
