--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -104,7 +104,7 @@
         </li>
 
         <li class="">
-          <a href="" class="">
+          <a href="{% url 'inbox:inbox' %}" class="">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
