--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -154,7 +154,7 @@
                     </div>
                 {% endif %}
                 
-                <input type="text" name="login" placeholder="Username or Email" value="{{ form.login.value }}" required>
+                <input type="text" name="login" placeholder="Username or Email" value="{{ form.login.value|default_if_none:'' }}" required>
                 <input type="password" name="password" placeholder="Password" required>
 
                 <div class="d-flex justify-content-between align-items-center mb-3">
